--- a/bloque 3/Web_Semantica.html
+++ b/bloque 3/Web_Semantica.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-<!--open graph data-->
+<!--open graph data (lo que se previsualiza al compartir)--> 
     <meta property="og:title" content="Web Semantica"/>
     <meta property="og:type" content="article"/>
     <meta property="og:url" content="http://www.example.com"/>
