--- a/PROYECTO_FINAL/Curriculim_Vitae.html
+++ b/PROYECTO_FINAL/Curriculim_Vitae.html
@@ -21,7 +21,7 @@
 
     <div class="container text-center">
         <div class="row">
-            <div class="col-md-4 Fondo">
+            <div class="col-md-4 ">
 
                 <img src="https://randomuser.me/api/portraits/men/75.jpg" alt="Imágen del/la aplicante" class="Img">
 
@@ -58,7 +58,7 @@
 
             </div>
 
-            <div class="col-md-8 Fondo">
+            <div class="col-md-8 ">
                 
                 <h1 id="Nombre" bold>Darwin Waterson</h1>
             
